--- a/gpunit_functionality/subset_select/invalid_alt_delim_2_test.yml
+++ b/gpunit_functionality/subset_select/invalid_alt_delim_2_test.yml
@@ -20,5 +20,6 @@ assertions:
        jobStatus: failure
        files:
             "stderr.txt":
-                diffCmd: ../diffFirstLineOnly.sh
+                diffCmd: ../grepMessage.sh java.lang.IllegalArgumentException..Gene.Set.selection.specifier..8q11..is.not.valid
+                # The following file is unused; keeping it just for reference.
                 diff: "<%gpunit.resultData%>gpunit/Chip2Chip/v1/output/subset_select/invalid_alt_delim_2_test/stderr.txt"
