--- a/gpunit_functionality/basics/multi_msigdb_gmt_test.yml
+++ b/gpunit_functionality/basics/multi_msigdb_gmt_test.yml
@@ -4,7 +4,7 @@ module: Chip2Chip
 name: Chip2Chip multi_msigdb_gmt_test
 description: Test Chip2Chip with multiple MSigDB GMTs.
 params:
-       gene.sets.database: [ "ftp://gpftp.broadinstitute.org/module_support_files/msigdb/gmt/c1.all.v6.0.symbols.gmt", "ftp://gpftp.broadinstitute.org/module_support_files/msigdb/gmt/c2.cp.kegg.v6.0.symbols.gmt" ]
+       gene.sets.database: [ "https://data.broadinstitute.org/gsea-msigdb/msigdb/release/6.0/c1.all.v6.0.symbols.gmt", "https://data.broadinstitute.org/gsea-msigdb/msigdb/release/6.0/c2.cp.kegg.v6.0.symbols.gmt" ]
        chip.platform.file: "<%gpunit.testData%>gpunit/Chip2Chip/v1/input/HG_U95Av2.chip" 
        gene.set.matrix.output.format: "gmt"
        output.verbose.mapping.details: "false"
