Updated for the GSEA 4.2.0 release

--- a/release.properties
+++ b/release.properties
@@ -1,5 +1,5 @@
-#Tue, 12 Jun 2018 04:49:27 +0900
+#Fri, 17 Dec 2021 15:22:15 -0800
 LSID.noVersion=urn\:lsid\:broad.mit.edu\:cancer.software.genepattern.module.analysis\:00361
 release.version=0.7
-build.number=8
-build.timestamp=Tue, 12 Jun 2018 04\:49\:27 +0900
+build.number=9
+build.timestamp=Fri, 17 Dec 2021 15\:22\:15 -0800
